[package]
name = "asbru"
version = "0.0.2"
authors = ["Anthony Griffon <anthony@griffon.one>"]
description = "A Data-oriented service mesh generator"
readme = "README.md"
repository = "https://github.com/miaxos/asbru"
documentation = "https://docs.rs/asbru"
license = "MIT"
keywords = ["async_graphql", "async", "graphql", "service-mesh", "codegen"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[[bin]]
name = "asbru"
path = "src/main.rs"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.0"
async-graphql-parser = "2.9.10"
anyhow = "1.0.42"
thiserror = "1.0.26"
toml = "0.5"
serde_derive = "1.0.127"                    # Macros 1.1 implementation of #[derive(Serialize, Deserialize)]
serde = "1.0.127"
codegen = "0.1.3"                                   # Library for generating Rust code
