[package]
name = "asbru"
version = "0.0.12"
authors = ["Anthony Griffon <anthony@griffon.one>"]
description = "A Data-oriented service mesh generator"
readme = "README.md"
repository = "https://github.com/miaxos/asbru"
documentation = "https://docs.rs/asbru"
license = "MIT"
keywords = ["async_graphql", "async", "graphql", "service-mesh", "codegen"]
categories = ["network-programming", "asynchronous"]
edition = "2018"

[[bin]]
name = "asbru"
path = "src/main.rs"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.0"
async-graphql-parser = "2.9.10"
async-graphql-value = "2.9.10"
anyhow = "1.0.42"
thiserror = "1.0.26"
toml = "0.5"
serde_derive = "1.0.*"                    # Macros 1.1 implementation of #[derive(Serialize, Deserialize)]
serde = "1.0.*"
serde_json = "1.0.*"                     # A JSON serialization file format
codegen = "0.1.3"                                   # Library for generating Rust code
url = { version = "2.2.2", features = ["serde"] }                 # URL library for Rust, based on the WHATWG URL Standard
http = "0.2.4"                     # A set of types for representing HTTP requests and responses. 
convert_case = "0.4.0"              # Convert strings into any case
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
insta = "1.7.0"
